--- a/src/june2025.css
+++ b/src/june2025.css
@@ -386,8 +386,8 @@
   }
 }
 
-@media screen and (min-width: 401px) and (max-width: 480px) and (min-height: 900px) {
-  /*To ensure on mobile screens below between 401px and 480px width and height 900px and above that relevant components 
+@media screen and (min-width: 401px) and (max-width: 480px) {
+  /*To ensure on mobile screens below between 401px and 480px width that relevant components 
   of the site are displayed with the best dimensions for the smaller devices*/
 
   .headerPhotoJune2025 {
@@ -408,90 +408,11 @@
     width: 400px;
     height: 200px;
     margin: 50px auto 0;
-    -webkit-transform: translate(0, -280%) scale(0.3);
-    -moz-transform: translate(0, -280%) scale(0.3);
-    -ms-transform: translate(0, -280%) scale(0.3);
-    -o-transform: translate(0, -280%) scale(0.3);
-    transform: translate(0, -280%) scale(0.3);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -151%;
-      margin-left: 100%;
-    }
-    to {
-      top: 150%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media only screen and (min-width: 410px) and (min-height: 900px) and (max-width: 950px) and (max-height: 920px) {
-  .headerPhotoJune2025 {
-    margin-top: -30%;
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0, -220%) scale (0.5);
-    -moz-transform: translate(0, -220%) scale (0.5);
-    -ms-transform: translate(0, -220%) scale (0.5);
-    -o-transform: translate(0, -220%) scale (0.5);
-    transform: translate(0, -220%) scale (0.5);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -151%;
-      margin-left: 100%;
-    }
-    to {
-      top: 150%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media screen and (min-width: 401px) and (max-width: 480px) and (max-height: 899px) {
-  /*To ensure on mobile screens below between 401px and 480px width and max height 899px that relevant components 
-  of the site are displayed with the best dimensions for the smaller devices*/
-
-  .headerPhotoJune2025 {
-    margin-top: -30%;
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0, -273%) scale(0.3);
-    -moz-transform: translate(0, -273%) scale(0.3);
-    -ms-transform: translate(0, -273%) scale(0.3);
-    -o-transform: translate(0, -273%) scale(0.3);
-    transform: translate(0, -273%) scale(0.3);
+    -webkit-transform: translate(0%, -280%) scale(0.3);
+    -moz-transform: translate(0%, -280%) scale(0.3);
+    -ms-transform: translate(0%, -280%) scale(0.3);
+    -o-transform: translate(0%, -280%) scale(0.3);
+    transform: translate(0%, -280%) scale(0.3);
   }
 
   @keyframes move-animation {
@@ -547,7 +468,7 @@
   }
 }
 
-@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 799px) and (max-height: 899px) {
+@media screen and (min-width: 359px) and (max-width: 379px) {
   /*To ensure on mobile screens below between 359px and 379px width and min-height:799px and max-height: 899px  (this includes one plus phones) that relevant components 
   of the site are displayed with the best dimensions for the smaller devices*/
 
@@ -574,88 +495,6 @@
     -ms-transform: translate(0%, -257%) scale(0.3);
     -o-transform: translate(0%, -257%) scale(0.3);
     transform: translate(0%, -257%) scale(0.3);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -91%;
-      margin-left: 100%;
-    }
-    to {
-      top: 90%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 698px) and (max-height: 798px) {
-  /*To ensure on mobile screens below between 359px and 379px width and min-height:650px and max-height: 798px  (this includes one plus phones) that relevant components 
-  of the site are displayed with the best dimensions for the smaller devices*/
-
-  .headerPhotoJune2025 {
-    margin-top: -50%;
-    -webkit-transform: scale(0.5);
-    -moz-transform: scale(0.5);
-    -ms-transform: scale(0.5);
-    -o-transform: scale(0.5);
-    transform: scale(0.5);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0%, -247%) scale(0.3);
-    -moz-transform: translate(0%, -247%) scale(0.3);
-    -ms-transform: translate(0%, -247%) scale(0.3);
-    -o-transform: translate(0%, -247%) scale(0.3);
-    transform: translate(0%, -247%) scale(0.3);
-  }
-
-  @keyframes move-animation {
-    from {
-      top: -91%;
-      margin-left: 100%;
-    }
-    to {
-      top: 90%;
-      margin-left: -100%;
-    }
-  }
-}
-
-@media screen and (min-width: 359px) and (max-width: 379px) and (min-height: 600px) and (max-height: 697px) {
-  /*To ensure on mobile screens below between 359px and 379px width and min-height:600px and max-height: 697px  (this includes one plus phones) that relevant components 
-  of the site are displayed with the best dimensions for the smaller devices*/
-
-  .headerPhotoJune2025 {
-    margin-top: -50%;
-    -webkit-transform: scale(0.6);
-    -moz-transform: scale(0.6);
-    -ms-transform: scale(0.6);
-    -o-transform: scale(0.6);
-    transform: scale(0.6);
-  }
-
-  .monthHeaderJune2025 {
-    margin-top: 15%;
-    margin-bottom: 15%;
-  }
-
-  .catWalking {
-    width: 400px;
-    height: 200px;
-    margin: 50px auto 0;
-    -webkit-transform: translate(0%, -248%) scale(0.3);
-    -moz-transform: translate(0%, -248%) scale(0.3);
-    -ms-transform: translate(0%, -248%) scale(0.3);
-    -o-transform: translate(0%, -248%) scale(0.3);
-    transform: translate(0%, -248%) scale(0.3);
   }
 
   @keyframes move-animation {
