--- a/src/june2025.css
+++ b/src/june2025.css
@@ -304,8 +304,47 @@
   }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1200px) {
-  /*To ensure on screens between 769px and 1200px width (this includes small screens and laptops) that relevant components 
+@media screen and (min-width: 1001px) and (max-width: 1200px) {
+  /*To ensure on screens between 1001px and 1200px width (this includes small screens and laptops) that relevant components 
+  of the site are displayed with the best dimensions for the device*/
+
+  .headerPhotoJune2025 {
+    margin-top: -20%;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+
+  .monthHeaderJune2025 {
+    margin-top: 10%;
+    margin-bottom: 10%;
+  }
+
+  .catWalking {
+    width: 400px;
+    height: 200px;
+    margin: 50px auto 0;
+    -webkit-transform: translate(0%, -280%) scale(0.6);
+    -moz-transform: translate(0%, -280%) scale(0.6);
+    -ms-transform: translate(0%, -280%) scale(0.6);
+    -o-transform: translate(0%, -280%) scale(0.6);
+    transform: translate(0%, -280%) scale(0.6);
+  }
+
+  @keyframes move-animation {
+    from {
+      margin-left: 100%;
+    }
+    to {
+      margin-left: -100%;
+    }
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1000px) {
+  /*To ensure on screens between 769px and 1000px width (this includes small screens and laptops) that relevant components 
   of the site are displayed with the best dimensions for the device*/
 
   .headerPhotoJune2025 {
